Replacing Path.of() due to language level